syntax = "proto3";
package provenance.sanction.v1;

import "cosmos_proto/cosmos.proto";
import "provenance/sanction/v1/sanction.proto";

option go_package = "github.com/provenance-io/provenance/x/sanction";

// GenesisState defines the sanction module's genesis state.
message GenesisState {
  // params are the sanction module parameters.
  Params params = 1;
  // sanctioned_addresses defines account addresses that are sanctioned.
  repeated string sanctioned_addresses = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // temporary_entries defines the temporary entries associated with on-going governance proposals.
  repeated TemporaryEntry temporary_entries = 3;
}